--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -31,7 +31,7 @@
   "home": "主页",
   "rank": "排行",
   "repo": "仓库",
-  "text-level-1": "你真的捞",
+  "text-level-1": "真的捞",
   "text-level-2": "看得下去",
   "text-level-3": "TQL",
   "text-level-4": "您",
